--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.2",
+    "react-router": "^6.23.1",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
